Add serial port and formatting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.8)
 project(a1ex-kernel)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_C_FLAGS "-nostdlib")
-set(CMAKE_CXX_FLAGS "-nostdlib")
+set(CMAKE_C_FLAGS "-nostdlib -fshort-wchar")
+set(CMAKE_CXX_FLAGS "-nostdlib -fshort-wchar")
 set(LINKER_SCRIPT "${CMAKE_SOURCE_DIR}/kernel.ld")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-T -Wl,${LINKER_SCRIPT} -static")
 SET(BUILD_SHARED_LIBS OFF)
