--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,6 @@ include_directories(include)
 add_subdirectory(lib)
 add_subdirectory(mm)
 
-add_executable(kernel kernel.cpp irq.S irq.cpp init/init.cpp init/init.S debug.cpp kthread.cpp)
+add_executable(kernel kernel.cpp irq.S irq.cpp init/init.cpp init/init.S debug.cpp kthread.cpp syscall.cpp)
 target_link_libraries(kernel lib mm)
 set_target_properties(kernel PROPERTIES LINK_DEPENDS ${CMAKE_SOURCE_DIR}/kernel.ld)
