--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -4,3 +4,5 @@ add_library(lib
         port_io.cpp
         cpu_utils.cpp
         )
+target_compile_options(lib PUBLIC ${KERNEL_COMPILE_OPTIONS})
+target_include_directories(lib PUBLIC ${KERNEL_INCLUDE_DIRS})
