--- a/user/CMakeLists.txt
+++ b/user/CMakeLists.txt
@@ -7,7 +7,7 @@ target_compile_options(user_init PRIVATE ${USER_COMPILE_OPTIONS})
 target_link_options(user_init PRIVATE ${USER_LINK_OPTIONS})
 target_include_directories(user_init PRIVATE ${USER_INCLUDE_DIRS})
 
-add_custom_target(bundled_user_programs ALL
+add_custom_target(bundled_user_programs
         COMMAND ld -r -b binary -o ${CMAKE_CURRENT_BINARY_DIR}/user_init.bin.o -L ${CMAKE_CURRENT_BINARY_DIR} user_init
         DEPENDS user_init
         VERBATIM
