--- a/fs/CMakeLists.txt
+++ b/fs/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_library(fs initramfs.cpp)
+add_library(fs initramfs.cpp tree.cpp)
+target_compile_options(fs PUBLIC ${KERNEL_COMPILE_OPTIONS})
+target_include_directories(fs PUBLIC ${KERNEL_INCLUDE_DIRS})
