--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(common unwind.cpp)
+add_library(common unwind.cpp endian.cpp)
 target_compile_options(common PUBLIC ${KERNEL_COMPILE_OPTIONS})
 target_include_directories(common PUBLIC ${KERNEL_INCLUDE_DIRS})
