add compilable userspace libc and busybox

--- a/user/CMakeLists.txt
+++ b/user/CMakeLists.txt
@@ -8,7 +8,14 @@ target_link_options(user_init PRIVATE ${USER_LINK_OPTIONS})
 target_include_directories(user_init PRIVATE ${USER_INCLUDE_DIRS})
 
 add_custom_target(bundled_user_programs
-        COMMAND ld -r -b binary -o ${CMAKE_CURRENT_BINARY_DIR}/user_init.bin.o -L ${CMAKE_CURRENT_BINARY_DIR} user_init
+        COMMAND ld -r -b binary -o ${CMAKE_CURRENT_BINARY_DIR}/user_init.bin.o user_init
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
         DEPENDS user_init
+        VERBATIM
+        )
+
+add_custom_target(bundled_busybox
+        COMMAND ld -r -b binary -o ${CMAKE_CURRENT_BINARY_DIR}/busybox.bin.o busybox
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/3rdparty/busybox
         VERBATIM
         )
