--- a/.github/workflows/qemu.yml
+++ b/.github/workflows/qemu.yml
@@ -26,6 +26,9 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: recursive
+        lfs: true
+    - name: Checkout LFS objects
+      run: git lfs checkout
 
     # Build mlibc
     - name: Build mlibc
